--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,6 @@
-body{
-  font-family: sans-serif;
-  font-size:110%;
+body {
+  font-family: 'Poppins', sans-serif;
+  font-size: 110%;
   background-color: #FCF7F8;
 }
 
@@ -11,4 +11,13 @@ header {
 footer {
   background-color: #343330;
   text-align: center;
+}
+
+h1 {
+  font-family: 'Noto Serif Display', serif;
+  color: #8C5B49;
+}
+
+.info {
+  background-color: #F2BFB3;
 }
