--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -6,13 +6,6 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-}
-
-
-footer {
-  background-color: #A65362;
-  text-align: center;
 }
 
 h1 {
@@ -37,11 +30,10 @@ h2 {
   color: #A65362;
 }
 
-
 img {
   border-radius: 50%;
-  width: 20%;
-  height: 45%;
+  width: 250px;
+  height: 300px;
   border: 3px solid #F2E0D0;
 }
 
@@ -51,7 +43,6 @@ header {
   padding: 0%;
   text-align: center;
 }
-
 
 #Menu {
   background-color: #A65362;
@@ -74,8 +65,48 @@ header {
   background-color: #BF8F84;
   margin: 0%;
   padding: 5%;
+  flex-basis: 1rem;
+  flex-grow: 1;
 }
 
 .info {
   padding: 0 5% 0 5%;
+  flex-basis: 2rem;
+}
+
+#main {
+  display: flex;
+  flex-direction: row;
+  overflow: unset;
+}
+
+.skillsSection {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding-bottom: 5%;
+}
+
+#contact {
+  color: #F2E0D0;
+  text-align: center;
+}
+
+footer {
+  background-color: #A65362;
+  text-align: center;
+
+}
+
+.contactIcon {
+  width: 3rem;
+  height: 3rem;
+  border: none;
+  padding: 2%;
+}
+
+#bottomLink {
+  color: #F2E0D0;
+  font-size: medium;
+  text-decoration: none;
 }
