Updates for final Resume 1 submission
Changed the naming to camel case only to address the feedback about the use of both camel and pascal.

Added some comments in the html & css doc to address the feedback about not having any comments initially

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,6 +8,7 @@ body {
   flex-direction: column;
 }
 
+
 h1 {
   font-family: 'Playfair Display', serif;
   font-weight: 800;
@@ -44,7 +45,7 @@ header {
   text-align: center;
 }
 
-#Menu {
+#menu {
   background-color: #A65362;
   padding-top: 2%;
   display: flex;
@@ -54,7 +55,7 @@ header {
   margin-right: 20%;
 }
 
-.NavOption {
+.navOption {
   text-decoration: none;
   color: #F2E0D0;
   font-weight: 400;
